Kotlin daemon JVM args - clearing up inheritance and defaults (#4454)
* add notes about jvm inheritance and defaults for kotlin daemon

* Update docs/topics/gradle/gradle-compilation-and-caches.md

Co-authored-by: Alex Likhachev <ALikhachev@users.noreply.github.com>

* Update docs/topics/gradle/gradle-compilation-and-caches.md

Co-authored-by: Alex Likhachev <ALikhachev@users.noreply.github.com>

* remove arg that is not actually a default

* apply Writerside update for callouts

* Apply suggestions from code review

Co-authored-by: Sarah Haggarty <81160244+sarahhaggarty@users.noreply.github.com>

---------

Co-authored-by: Alex Likhachev <ALikhachev@users.noreply.github.com>
Co-authored-by: Sarah Haggarty <81160244+sarahhaggarty@users.noreply.github.com>